[gd_scene format=3 uid="uid://c0ie8hx71ss4e"]

[ext_resource type="Script" uid="uid://m52b7apoi6e7" path="res://scenes/mask_fake.gd" id="1_up7h0"]
[ext_resource type="Texture2D" uid="uid://bycdlvhpt3vg" path="res://icon.svg" id="1_xhklc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_up7h0"]
radius = 66.75328

[node name="MaskFake" type="Area2D" unique_id=391991785 groups=["mask_fake"]]
script = ExtResource("1_up7h0")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1368562088]
texture = ExtResource("1_xhklc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=102541077]
shape = SubResource("CircleShape2D_up7h0")

[node name="Timer" type="Timer" parent="." unique_id=425734148]
autostart = true

[node name="Movimiento" type="Timer" parent="." unique_id=1898344006]
wait_time = 3.0
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Movimiento" to="." method="_on_movimiento_timeout"]
